--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "flux": "^3.1.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "throttle-debounce": "^1.0.1"
   },
